--- a/js/react/redux-for-beginners-v1/src/custom.css
+++ b/js/react/redux-for-beginners-v1/src/custom.css
@@ -97,3 +97,21 @@ h3 {
 .btn:hover {
     background-color: #6d8cb0
 }
+
+.photo {
+    display: inline-block;
+    margin: 10px 5px;
+    width: 150px;
+    height: 100px;
+}
+
+.photo img {
+    max-width: 100%;
+    max-height: 100%;
+    margin: auto;
+    display: block;
+}
+
+.error {
+    color: #FF0000;
+}
